--- a/src/components/Door.css
+++ b/src/components/Door.css
@@ -1,4 +1,34 @@
 /* Door.css */
+body {
+    background-size: cover;
+    background: 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 70%);
+}
+
+.header {
+    background-color: #7E121D; /* Deep red background */
+    color: #CEAC5C; /* Golden letters */
+    padding: 1rem;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
+    align-self: center;
+    width: 100%; /* Make header full width */
+    top: 0;
+    box-sizing: border-box; /* Include padding in width calculation */
+    margin: 0;
+}
+
+.header h1 {
+    font-size: 3rem;
+    margin: 0;
+}
+
+header p {
+    margin: 5px 0 0;
+    font-size: 1.2rem;
+}
+
 .main-container {
     display: flex; /* Flex layout to place items side by side */
     gap: 1rem;
@@ -12,7 +42,7 @@
     flex-grow: 3; /* Take up more space compared to message */
     justify-content: space-evenly;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); 
+    grid-template-columns: repeat(6, 1fr);
     gap: 1rem; /* Adds space between doors */
     color: #ffffff;
     box-sizing: border-box;
@@ -20,17 +50,16 @@
 
 .Calendar::before {
     content: "";
-    position: absolute;
     top: 0;
     left: 0;
-    right: 0;
     bottom: 0;
-    background-image: url('/Christmas Calendar.jpg'); /* Path to the background image */
+    right: 0;
+    position: absolute;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 1) 100%), url('/Christmas Calendar.jpg');
     background-size: cover; /* Makes the image cover the entire area */
-    background-position: center; /* Centers the image */
+    background-position: center;
     background-repeat: no-repeat; /* Prevents the image from repeating */
-    z-index: -1; /* Places the overlay behind the content */
-    max-width: 100%;
+    z-index: -1;
 }
 
 .message {
@@ -78,9 +107,6 @@
     border-color: #999;
 }
 
-.custom-door::selection{
-    background-color: rgb(0, 0, 0);
-}
 
 /* Special styling for Door 24 */
 .custom-door-last {
@@ -88,7 +114,7 @@
 }
 
 /* Media Queries for Smaller Screens */
-@media (max-width: 768px){
+@media (max-width: 1000px){
     .custom-door{
         font-size: 1.2rem; /* Smaller font size for smaller screens */
         padding: 1vh;
@@ -97,9 +123,15 @@
         font-size: 1rem;
         width: 100%;
     }
+    .message h2{
+        font-size: 1rem;
+    }
+    .message h1{
+        font-size: 1rem;
+    }
     .Calendar {
         gap: 1rem; /* Reduce gap between doors*/
-        grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
+        grid-template-columns: repeat(12, 1fr);
         width: 100%;
         margin: 0 auto;
         box-sizing: border-box;
@@ -114,5 +146,24 @@
         padding: 1vh 2vw; /* Reduce padding for smaller screens */
         box-sizing: border-box;
         width: 96vw;
+    }
+    .header h1 {
+        font-size: 1.5rem;
+        margin: 0;
+    }
+
+    header p {
+        margin: 5px 0 0;
+        font-size: 1rem;
+    }
+}
+@media (max-width: 835px) {
+    .Calendar {
+        grid-template-columns: repeat(8, 1fr);
+    }
+}
+@media (max-width: 545px) {
+    .Calendar {
+        grid-template-columns: repeat(6, 1fr);
     }
 }
